--- a/src/app/components/booksList/books/books.component.html
+++ b/src/app/components/booksList/books/books.component.html
@@ -1,3 +1,11 @@
-<p>
-  books works!
-</p>
+<div class="row bookRow" >
+  <div *ngFor="let book of bookList" class="card col-md-3 bookCard" style="">
+    <div class="card-body">
+      <h5 class="card-title">{{book.bookTitle}}</h5>
+      <h6 class="card-subtitle mb-2 text-muted"><b>Author(s):</b> {{book.authorsNames}}</h6>
+      <h6 class="card-subtitle mb-2 text-muted"><b>Publish date:</b> {{book.publishedDate}}</h6>
+      <button type="button" class="btn btn-info buttonBookCard">Edit book</button>
+      <button type="button" class="btn btn-danger buttonBookCard">Remove book</button>
+    </div>
+  </div>
+</div>
