added auto incremented id for bookd

--- a/src/app/components/booksList/books/books.component.html
+++ b/src/app/components/booksList/books/books.component.html
@@ -1,5 +1,5 @@
 <div class="row bookRow" >
-  <div *ngFor="let book of bookList" class="card col-md-3 bookCard" style="">
+  <div *ngFor="let book of bookList" class="card col-md-3 bookCard">
     <div class="card-body">
       <h5 class="card-title">{{book.bookTitle}}</h5>
       <h6 class="card-subtitle mb-2 text-muted"><b>Author(s):</b> {{book.authorsNames}}</h6>
