--- a/src/app/components/booksList/books/books.component.html
+++ b/src/app/components/booksList/books/books.component.html
@@ -4,8 +4,16 @@
       <h5 class="card-title">{{book.bookTitle}}</h5>
       <h6 class="card-subtitle mb-2 text-muted"><b>Author(s):</b> {{book.authorsNames}}</h6>
       <h6 class="card-subtitle mb-2 text-muted"><b>Publish date:</b> {{book.publishedDate}}</h6>
-      <button type="button" class="btn btn-info buttonBookCard">Edit book</button>
-      <button type="button" class="btn btn-danger buttonBookCard">Remove book</button>
+      <button type="button" (click)="setSelectedBook(book)" class="btn btn-info buttonBookCard" data-toggle="modal" data-target="#editBook">
+        Edit book
+      </button>
+      <button type="button" data-toggle="modal" data-target="#editBook" class="btn btn-danger buttonBookCard">Remove book</button>
+      
     </div>
   </div>
 </div>
+
+
+
+
+<app-edit-book [selectedBook]="selectedBook"></app-edit-book>
