--- a/src/app/components/booksList/books/books.component.html
+++ b/src/app/components/booksList/books/books.component.html
@@ -7,12 +7,11 @@
       <button type="button" (click)="setSelectedBook(book)" class="btn btn-info buttonBookCard" data-toggle="modal" data-target="#editBook">
         Edit book
       </button>
-      <button type="button" data-toggle="modal" data-target="#editBook" class="btn btn-danger buttonBookCard">Remove book</button>
+      <button type="button" class="btn btn-danger buttonBookCard" (click)="deleteBook(book)">Remove book</button>
       
     </div>
   </div>
 </div>
-
 
 
 
