--- a/src/app/components/booksList/delete-book/delete-book.component.html
+++ b/src/app/components/booksList/delete-book/delete-book.component.html
@@ -1,3 +1,32 @@
-<p>
-  delete-book works!
-</p>
+<div class="modal fade" id="editBook" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Edit book</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label>Book title</label>
+              <input type="text" class="form-control" [(ngModel)]="edittedBookTitle" name="edittedBookTitle" id="bookTitleInput" value="{{selectedBook.bookTitle}}">
+            </div>
+            <div class="form-group">
+              <label>Authors</label>
+              <input type="text" class="form-control" id="authorsInput" value="{{selectedBook.authorsNames}}">
+            </div>
+            <div class="form-group">
+              <label>Published date</label>
+              <input type="text" class="form-control" id="publishedDateInput" value="{{selectedBook.publishedDate}}">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" (click)="saveBookChanges()">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
