--- a/src/app/components/booksList/edit-book/edit-book.component.html
+++ b/src/app/components/booksList/edit-book/edit-book.component.html
@@ -19,7 +19,7 @@
           </div>
           <div class="form-group">
             <label>Published date</label>
-            <input type="text" class="form-control" id="publishedDateInput" value="{{selectedBook.getDateString()}}" (keyup)="bookDateChanged($event.target.value)">
+            <input type="text" class="form-control" id="publishedDateInput" value="{{selectedBook.publishedDate | date:'MM/dd/yyyy'}}" (keyup)="bookDateChanged($event.target.value)">
             <span [hidden]="isDateValid == true" class="badge badge-danger">Date is invalid. Please enter date in format dd/mm/yyyy</span>
           </div>
         </form>
