--- a/src/app/components/booksList/books/books.component.html
+++ b/src/app/components/booksList/books/books.component.html
@@ -12,7 +12,7 @@
       <button type="button" (click)="setSelectedBook(book)" class="btn btn-info buttonBookCard" data-toggle="modal" data-target="#editBook">
         Edit book
       </button>
-      <button type="button" class="btn btn-danger buttonBookCard" (click)="deleteBook(book)">Remove book</button>
+      <button type="button" (click)="setSelectedBook(book)" class="btn btn-danger buttonBookCard" data-toggle="modal" data-target="#deleteBook">Remove book</button>
 
     </div>
   </div>
@@ -21,3 +21,4 @@
 
 
 <app-edit-book [selectedBook]="selectedBook"></app-edit-book>
+<app-delete-book [selectedBook]="selectedBook" [bookList]="bookList"></app-delete-book>>
