--- a/src/app/components/booksList/books/books.component.css
+++ b/src/app/components/booksList/books/books.component.css
@@ -1,5 +1,6 @@
 .bookCard {
     padding: 0;
+    margin: 1% 0;
 }
 
 .bookRow {
@@ -9,4 +10,8 @@
 
 .buttonBookCard {
     margin: 0 1%;  
+}
+
+a.bookHeader {
+    margin: 0 1%;
 }
