--- a/src/app/components/booksList/main-book-list/main-book-list.component.html
+++ b/src/app/components/booksList/main-book-list/main-book-list.component.html
@@ -1,3 +1,3 @@
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addBook">Add new book</button>
+<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addBook">Add new book</button> -->
 <app-books [bookList]="bookList"></app-books>
 <app-add-book [bookList]="bookList"></app-add-book>
