--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -1,3 +1,20 @@
-<nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">BooksAPI</a>
-</nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+        <i class="fa fa-home"></i>
+        BooksAPI
+    </a>	
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#" data-toggle="modal" data-target="#addBook">
+            <i class="fa fa-plus"></i>
+            add new book
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
