--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,3 +1,5 @@
-<p>
-  footer works!
-</p>
+<nav class="navbar navbar-light bg-light">
+  <span class="navbar-text">
+    All right reserved for yonigel
+  </span>
+</nav>
