--- a/src/app/components/booksList/delete-book/delete-book.component.html
+++ b/src/app/components/booksList/delete-book/delete-book.component.html
@@ -11,8 +11,8 @@
           Are you sure you want to delete book <b>{{selectedBook.bookTitle}}</b>?
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-          <button type="button" class="btn btn-primary" (click)="deleteBook(selectedBook)">Yes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" (click)="deleteBook(selectedBook)" data-dismiss="modal">OK</button>
         </div>
       </div>
     </div>
