--- a/src/app/components/booksList/add-book/add-book.component.html
+++ b/src/app/components/booksList/add-book/add-book.component.html
@@ -13,6 +13,7 @@
               <label>Book title</label>
               <input type="text" class="form-control" name="edittedBookTitle" id="bookTitleInput" placeholder="Title" (keyup)="bookTitleChanged($event.target.value)">
               <span [hidden]="!bookTitleInvalid" class="badge badge-danger">Book's title can't be empty</span>
+              <span [hidden]="!isNewBookExists" class="badge badge-danger">This book is already exists</span>
             </div>
             <div class="form-group">
               <label>Authors</label>
@@ -28,7 +29,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" (click)="addNewBook()" [attr.disabled]="(edittedBooksAuthor == '' || edittedBookTitle == '' || isDateValid == false) ? '' : null">Add book</button>
+          <button type="button" class="btn btn-primary" (click)="addNewBook()" [attr.disabled]="(edittedBooksAuthor == '' || edittedBookTitle == '' || isDateValid == false || isNewBookExists == true) ? '' : null">Add book</button>
         </div>
       </div>
     </div>
