--- a/src/app/components/booksList/add-book/add-book.component.html
+++ b/src/app/components/booksList/add-book/add-book.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" (click)="addNewBook()" [attr.disabled]="(edittedBooksAuthor == '' || edittedBookTitle == '' || isDateValid == false || isNewBookExists == true) ? '' : null">Add book</button>
+          <button type="button" class="btn btn-primary" (click)="addNewBook()" [attr.disabled]="(newBookAuthor == '' || newBookTitle == '' || isDateValid == false || isNewBookExists == true || newbookDate == null) ? '' : null" data-dismiss="modal">Add book</button>
         </div>
       </div>
     </div>
