--- a/src/app/components/booksList/books/books.component.html
+++ b/src/app/components/booksList/books/books.component.html
@@ -22,6 +22,7 @@
     </div>
     <div class="card-body">
       
+      <h6 class="card-subtitle mb-2 text-muted" style="text-align: center"><img src="{{book.bookImageURL}}" style="margin: auto auto;"></h6>
       <h5 class="card-title">{{book.bookTitle | bookTitlePipe}}</h5>
       <h6 class="card-subtitle mb-2 text-muted"><b>id:</b> {{book.id}}</h6>
       <h6 class="card-subtitle mb-2 text-muted"><b>Author(s):</b> {{book.authorsNames}}</h6>
