--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light">
   <span class="navbar-text">
-    All right reserved for yonigel
+    All right reserved 
   </span>
 </nav>
