--- a/src/app/components/booksList/books/books.component.html
+++ b/src/app/components/booksList/books/books.component.html
@@ -1,17 +1,20 @@
 <div class="row bookRow" >
-  <div *ngFor="let book of bookList" class="card col-md-4 bookCard">
-    <div class="card-header bg-Light ">
+  <div *ngFor="let book of bookList" class="card col-md-4 bookCard  bg-light">
+    <div class="card-header ">
       <div class="row bookHeader">
-          <a href="#" class="badge badge-dark bookHeader" (click)="setSelectedBook(book)" data-toggle="modal" data-target="#editBook"><i class="fa fa-edit"></i> Edit</a>
-          <a href="#" class="badge badge-dark bookHeader" (click)="setSelectedBook(book)" data-toggle="modal" data-target="#deleteBook"><i class="fa fa-close"></i> Delete</a>
+        <b style="margin: auto auto">{{book.bookTitle | bookTitlePipe}}</b>
       </div>
     </div>
-    <div class="card-body">
+    <div class="card-body ">
       <h6 class="card-subtitle mb-2 text-muted" style="text-align: center"><img src="{{book.bookImageURL}}" style="margin: auto auto;"></h6>
-      <h5 class="card-title" style="text-align: center">{{book.bookTitle | bookTitlePipe}}</h5>
       <h6 class="card-subtitle mb-2 text-muted"><b>id:</b> {{book.id}}</h6>
       <h6 class="card-subtitle mb-2 text-muted"><b>Author(s):</b> {{book.authorsNames}}</h6>
       <h6 class="card-subtitle mb-2 text-muted"><b>Publish date:</b>{{book.publishedDate | date:"dd/MM/yyyy"}}</h6>
+    </div>
+    <div class="card-footer">
+      
+        <a href="#" class="badge badge-dark bookHeader" (click)="setSelectedBook(book)" data-toggle="modal" data-target="#editBook"><i class="fa fa-edit"></i> Edit</a>
+        <a href="#" class="badge badge-dark bookHeader" (click)="setSelectedBook(book)" data-toggle="modal" data-target="#deleteBook"><i class="fa fa-close"></i> Delete</a>
     </div>
   </div>
 </div>
