--- a/src/app/components/layout/header/header.component.html
+++ b/src/app/components/layout/header/header.component.html
@@ -3,13 +3,14 @@
       <i class="fa fa-home"></i>
       BooksAPI
     </a>	
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#" data-toggle="modal" data-target="#addBook">
+          <a class="nav-link headerLink" href="#" data-toggle="modal" data-target="#addBook">
             <i class="fa fa-plus"></i>
             add new book
           </a>
